--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -42,58 +42,58 @@
         app:srcCompat="@drawable/ic_action_turn_off" />
 
     <Button
-        android:id="@+id/Calender"
-        android:layout_width="212dp"
-        android:layout_height="111dp"
+        android:id="@+id/Change_Password"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginBottom="217dp"
+        android:layout_marginBottom="220dp"
         android:background="#00FFFFFF"
-        android:text="Calender"
+        android:text="Change Password"
         app:layout_constraintBottom_toTopOf="@+id/Log_out"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/feedback"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="199dp"
-        android:layout_height="109dp"
-        android:layout_marginBottom="217dp"
+        android:id="@+id/feedback"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="220dp"
         android:background="#00FFFFFF"
-        android:text="Some figure"
+        android:text="Provide Feedback"
         app:layout_constraintBottom_toTopOf="@+id/Log_out"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Calender" />
+        app:layout_constraintStart_toEndOf="@id/Change_Password" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="209dp"
-        android:layout_height="134dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
-        android:layout_marginBottom="101dp"
+        android:layout_marginBottom="100dp"
         android:background="#00FFFFFF"
         android:text="Some feature 2"
         app:layout_constraintBottom_toTopOf="@+id/Log_out"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Calender" />
+        app:layout_constraintTop_toBottomOf="@+id/feedback" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="204dp"
-        android:layout_height="124dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginBottom="93dp"
+        android:layout_marginBottom="100dp"
         android:background="#00FFFFFF"
         android:text="Some feature 3"
         app:layout_constraintBottom_toTopOf="@+id/Log_out"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/feedback" />
 
     <TextView
         android:id="@+id/textView"
@@ -108,7 +108,7 @@
         android:text="@string/Profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/Calender"
+        app:layout_constraintBottom_toTopOf="@id/Change_Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
