--- a/app/src/main/res/layout/content_logout.xml
+++ b/app/src/main/res/layout/content_logout.xml
@@ -13,11 +13,11 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:background="@color/colorAccent">
+    android:background="@color/colorWhite">
 
     <ImageButton
-        android:layout_width="351dp"
-        android:layout_height="237dp"
+        android:layout_width="396dp"
+        android:layout_height="285dp"
         android:layout_centerInParent="true"
         android:src="@drawable/smile" />
 
